--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,7 +7,7 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@400;500;600;700&family=Cormorant+Garamond:wght@600;700&display=swap" rel="stylesheet">
     <script>
       tailwind.config = {
         theme: {
@@ -15,10 +15,13 @@
             colors: {
               primary: '#540728',
               background: '#F9EEE5',
-              text: '#050505',
+              text: '#1A1A1A',
+              textSecondary: '#4d4d4d',
+              accent: '#C0B283',
             },
             fontFamily: {
               'sans': ['Jost', 'sans-serif'],
+              'serif': ['Cormorant Garamond', 'serif'],
             },
             animation: {
               'fade-in-up': 'fade-in-up 0.5s ease-out forwards',
@@ -36,8 +39,18 @@
     <style>
       body {
         background-color: #F9EEE5;
-        color: #050505;
+        color: #1A1A1A;
         font-family: 'Jost', sans-serif;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+      }
+      h1, h2, h3, h4, h5, h6 {
+        font-family: 'Cormorant Garamond', serif;
+        letter-spacing: 0.02em;
+      }
+      ::selection {
+        background-color: #540728;
+        color: #F9EEE5;
       }
     </style>
   <script type="importmap">
